added display to do

--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ button {
 .task-list {
   margin-block: 20px;
   padding-inline-end: 4px;
-  height: 380px;
+  height: 390px;
   margin-inline-end: -4px;
   overflow-y: scroll;
 }
@@ -178,11 +178,14 @@ li {
 .fa-trash-can:hover {
   color: #e7234a;
 }
-.fa-plus {
+.fa-plus,
+.fa-circle,
+.fa-circle-check {
   padding: 0 6px;
   font-size: 20px;
   color: #4a4b51;
 }
+
 ::placeholder {
   color: #4a4b51;
 }
@@ -216,4 +219,10 @@ li {
   grid-template-columns: repeat(4, 1fr);
   gap: 12px;
 }
-
+#msg {
+  color: rgb(203, 0, 0);
+  margin-top: 10px;
+}
+.check {
+  text-decoration: line-through;
+}
